# examples

./: .gitignore  README.md
develop/: README.md
develop/greeting-fetcher/: fetch
develop/myapp/: BUILD.jobs  message.txt
go-build/: BUILD.jobs  README.md  go.mod  go.sum  main.go
jobs-build/: BUILD.jobs  README.md
phoenix-build/: .amberignore  .gitignore  AGENTS.md  BUILD.jobs  README.md  hex-cache.ets  mix.exs
phoenix-build/assets/: package-lock.json  package.json
phoenix-build/assets/css/: app.css
phoenix-build/assets/js/: app.js
phoenix-build/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
phoenix-build/lib/: fireside.ex  fireside_web.ex
phoenix-build/lib/fireside/: application.ex  guestbook.ex  repo.ex
phoenix-build/lib/fireside_web/: endpoint.ex  router.ex  telemetry.ex
phoenix-build/test/: test_helper.exs
python-build/: BUILD.jobs  README.md  pyproject.toml
python-build/src/myapp/: __init__.py  __main__.py
python-rust-build/: BUILD.jobs  Cargo.toml  README.md  pyproject.toml
python-rust-build/python/myapp/: __init__.py  __main__.py
python-rust-build/src/: lib.rs
python-rust-sdist-build/: BUILD.jobs  README.md  pyproject.toml
python-rust-sdist-build/src/myapp/: __init__.py  __main__.py
python-sdist-build/: BUILD.jobs  README.md  pyproject.toml
rails-build/: .gitignore  BUILD.jobs  Gemfile  README.md  package.json
rails-build/config/: application.rb  cable.yml
rust-build/: BUILD.jobs  Cargo.toml  README.md
rust-build/src/: main.rs
subbuild/: BUILD.jobs  README.md
subbuild/sub/: BUILD.jobs
(+22 files in other folders)
