[project]
name = "myapp"
version = "0.1.0"
description = "JOBS python-build example: a tiny offline CLI + HTTP hello-world"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myapp"]
