[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "myapp"
version = "0.1.0"
description = "JOBS python-rust-build example: click+rich app with a PyO3 native module"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13",
]

[tool.maturin]
python-source = "python"
module-name = "myapp._native"
