[project]
name = "myapp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13",
    "nh3>=0.3.6",      # abi3 Rust HTML sanitizer built from sdist offline
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myapp"]
